--- a/ui/html/home.page.tmpl
+++ b/ui/html/home.page.tmpl
@@ -3,7 +3,6 @@
 {{define "body"}}
 <h2>Latest Snippets</h2>
 {{if .Snippets}}
-t bl
 <table>
 <tr>
 <th>Title</th>
@@ -13,7 +12,7 @@ t bl
 {{range .Snippets}}
 <tr>
 <td><a href='/snippet?id={{.ID}}'>{{.Title}}</a></td>
-<td>{{.Created}}</td>
+<td>{{humanDate .Created}}</td>
 <td>#{{.ID}}</td>
 </tr>
 {{end}}
