--- a/ui/html/create.page.tmpl
+++ b/ui/html/create.page.tmpl
@@ -1,17 +1,27 @@
 {{template "base" .}}
-{{define "title"}}Create a New Snippet{{end}}
-{{define "body"}}
-<form action='/snippet/create' method='POST'>
-<div>
-<label>Title:</label>
-<input type='text' name='title'>
-</div>
-<div>
-<label>Content:</label>
-<textarea name='content'></textarea>
-</div>
-<div>
-<input type='submit' value='Publish snippet'>
-</div>
-</form>
-{{end}}
+    {{define "title"}}Create a New Snippet{{end}}
+    {{define "body"}}
+        {{if .FormErrors.database}}
+            <h1>{{.}}</h1>
+        {{else}}
+            <form action='/snippet/create' method='POST'>
+            <div>
+                <label>Title:</label>
+                {{with .FormErrors.title}}
+                    <label class="error">{{.}}</label>
+                {{end}}
+                <input type='text' name='title' value='{{.FormData.Get "title"}}'>
+            </div>
+            <div>
+                <label>Content:</label>
+                {{with .FormErrors.content}}
+                    <label class="error">{{.}}</label>
+                {{end}}
+                <textarea name='content'>{{.FormData.Get "content"}}</textarea>
+            </div>
+            <div>
+                <input type='submit' value='Publish snippet'>
+            </div>
+            </form>
+        {{end}}
+    {{end}}
