--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -20,6 +20,9 @@
         <a href='/snippet/create'>Create snippet</a>
     </nav>
     <section>
+        {{with .Flash}}
+        <div class='flash '>{{.}}</div>
+        {{end}}
         {{template "body" .}}
     </section>
     {{template "footer" .}}
